# vara-eth-cross-ping

./: .gitignore  README.MD
cross-ping/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
cross-ping/app/: Cargo.toml
cross-ping/app/src/: lib.rs
cross-ping/client/: Cargo.toml  build.rs
cross-ping/client/src/: lib.rs
cross-ping/src/: lib.rs
cross-ping/tests/: gtest.rs
ping-receiver/: README.md  hardhat.config.js  package.json
ping-receiver/contracts/: ping-receiver.sol
ping-receiver/scripts/: deploy.js
relayer/: README.md  package.json
relayer/src/: config.ts  ethereum.ts  main.ts  types.ts  vara.ts
