[workspace]

members = ["app", "client"]

[package]
name = "cross-ping"
version = "0.1.0"
edition = "2024"

[dependencies]
cross-ping-app = { path = "app" }

[build-dependencies]
cross-ping-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
cross-ping = { path = ".", features = ["wasm-binary"] }
cross-ping-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
gtest = "1.8.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
parity-scale-codec = "3"

[features]
wasm-binary = []
